# combinatorial_games_26

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Nimble  README.md  Step-Size Bounded Nimble (1D Board, 3 Coins)  Welter's with Nimble Restrition  epic_plan.md  final_games.md  game_ideas.md  mex.py  nim_variant.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-check.yml
Chomp/: chomp_start.py  chomp_test_claude.py  chomp_test_gemini.py  display.py  faster_chomp_start.py  protected_diagonal_chomp.py  start.py
DOCUMENTATION/: Exploration stage.md  Part_1.md  Part_3.md
Nim/: display.py  even_faster_nim_start.py  faster_nim_start.py  mex.py  nim_start.py  test_nim.py
Nim Variant/: nim_variant.md  nim_variant_start.py
chomp_variant/: chomp_variant.py  diagonal.md  diet_chomp.md
diet_chomp/: diet_chomp.md  diet_chomp_start.py
docs/: architecture.md  paper_notes.md
euclids_game/: euclids_game_start.py
fibonacci_nim/: fibonacci_nim_start.py  rectangle_display.py
gcd/: gcd_start.py
lcm/: lcm_start.py
nim_variant/: asymmetric.md  asymmetric_bounded_nim.py  moore_check.py  moores_nim_2.py  nim_variant_start.py  tax_nim.py
subtract_a_square/: subtract_a_square_start.py
utils/: __init__.py  display.py
wythoffs_game/: _3d_wythoff.py  akiyama_algorithm.md  akiyama_positive.py  bounded.md  bounded_wythoff.py  combined.md  manual_bounded.py  restricted.md  restricted_wythoff.py  sorted_wythoff.py  todo.md  unbalanced_3.md  unbalanced_3d_wythoff.py  unbalanced_3d_wythoff_3.py  wythoff_combined.py
wythoffs_game/analysis/: analyze.py  plot_3d.py  (+13 more)
(+25 files in other folders)
